c4prj1_deck/grade.txt
Grading at Sun Mar  7 20:11:06 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:38:20: error: expected expression before ‘=’ token
   deck_t * build = = malloc(sizeof(*ex));
                    ^
deck.c:38:37: error: ‘ex’ undeclared (first use in this function)
   deck_t * build = = malloc(sizeof(*ex));
                                     ^
deck.c:38:37: note: each undeclared identifier is reported only once for each function it appears in
deck.c:43:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
     for (int j = 0 , j < n_hands ; j++){
                        ^
deck.c:43:39: error: expected ‘;’ before ‘)’ token
     for (int j = 0 , j < n_hands ; j++){
                                       ^
Compilation of deck.c failed

Overall Grade: F
